--- a/package.json
+++ b/package.json
@@ -45,18 +45,21 @@
 		"configuration": {
 			"title": "TypeScript123",
 			"properties": {
-			  "yyh-vscode-plugin.useCodeSnippetsOnMethodSuggest": {
-				"type": "boolean",
-				"default": false,
-				"description": "Complete functions with their parameter signature."
-			  },
-			  "yyh-vscode-plugin.tsdk": {
-				"type": ["string", "null"],
-				"default": null,
-				"description": "Specifies the folder path containing the tsserver and lib*.d.ts files to use."
-			  }
+				"yyh-vscode-plugin.useCodeSnippetsOnMethodSuggest": {
+					"type": "boolean",
+					"default": false,
+					"description": "Complete functions with their parameter signature."
+				},
+				"yyh-vscode-plugin.tsdk": {
+					"type": [
+						"string",
+						"null"
+					],
+					"default": null,
+					"description": "Specifies the folder path containing the tsserver and lib*.d.ts files to use."
+				}
 			}
-		  }
+		}
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
@@ -78,5 +81,8 @@
 		"mocha": "^8.2.1",
 		"typescript": "^4.1.3",
 		"vscode-test": "^1.5.0"
+	},
+	"dependencies": {
+		"moment": "^2.29.1"
 	}
 }
